fix mask z-index

--- a/assets/less_iframe/iframe_main.less
+++ b/assets/less_iframe/iframe_main.less
@@ -145,7 +145,7 @@ html.tdc-active #wpadminbar {
     width:100%;
     position: absolute;
     content: '';
-    z-index: 99998;
+    z-index: 1;
     min-height: 100px;
     background-color: white;
   }
@@ -159,7 +159,7 @@ html.tdc-active #wpadminbar {
     position: absolute;
     background: #F1F1F1 url("../images/loader.gif") no-repeat;
     content: '';
-    z-index: 99999;
+    z-index: 2;
     background-position: center;
 
     animation: tdc-dropped-colorchange 1s linear infinite;
@@ -249,7 +249,7 @@ html.tdc-active #wpadminbar {
   opacity: 0.3;
   pointer-events: none;
   position: absolute;
-  z-index: 99999;
+  z-index: 3;
   display: none;
 }
 
@@ -320,7 +320,7 @@ html.tdc-active #wpadminbar {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4;
   cursor: pointer;
 }
 
